update body background colour in index.html

--- a/sdweb/src/app.html
+++ b/sdweb/src/app.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
 	</head>
-	<body>
+	<body style="background: #D32D7D;">
 		<div>%sveltekit.body%</div>
 	</body>
 </html>
