--- a/sdweb/src/app.html
+++ b/sdweb/src/app.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
-		<meta name="viewport" content="width=device-width" />
-		%sveltekit.head%
-	</head>
-	<body style="background: #D32D7D;">
-		<div>%sveltekit.body%</div>
-	</body>
+
+<head>
+	<meta charset="utf-8" />
+	<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+	<meta name="viewport" content="width=device-width" />
+	<title>STIWDIO DYFI</title>
+	<link rel="apple-touch-icon" sizes="180x180" href="/sdfavs/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="/sdfavs/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="/sdfavs/favicon-16x16.png">
+	<link rel="manifest" href="/sdfavs/site.webmanifest">
+	%sveltekit.head%
+</head>
+
+<body style="background: #D32D7D;">
+	<div>%sveltekit.body%</div>
+</body>
+
 </html>
