--- a/sdweb/src/app.html
+++ b/sdweb/src/app.html
@@ -14,6 +14,10 @@
 
 <body style="background: #D32D7D;">
 	<div>%sveltekit.body%</div>
+	<!-- 100% privacy friendly analytics -->
+	<script async defer src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
+	<noscript><img src="https://queue.simpleanalyticscdn.com/noscript.gif" alt=""
+			referrerpolicy="no-referrer-when-downgrade" /></noscript>
 </body>
 
 </html>
