--- a/sdweb/src/app.html
+++ b/sdweb/src/app.html
@@ -12,7 +12,7 @@
 	%sveltekit.head%
 </head>
 
-<body>
+<body style="background: black;">
 	<div>%sveltekit.body%</div>
 	<!-- 100% privacy friendly analytics -->
 	<script async defer src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
