add meta tags to root html

--- a/sdweb/src/app.html
+++ b/sdweb/src/app.html
@@ -4,6 +4,10 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width" />
+	<meta name="description"
+        content="Stiwdio Dyfi is a Community Interest Company that inspires, connects and empowers local projects by and for the communities and young people in the Dyfi Biosphere, mid-Wales.">
+    <meta name="keywords"
+        content="stiwdio, dyfi, studio, nonprofit, CIC, young, people, community, communities, wales, cymru, creative">
 	<title>STIWDIO DYFI</title>
 	<link rel="apple-touch-icon" sizes="180x180" href="/sdfavs/apple-touch-icon.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="/sdfavs/favicon-32x32.png">
